force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Addhhradio__c</fullName>
        <label>Addhhradio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent or Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Designated Caretaker</fullName>
                </value>
                <value>
                    <fullName>Learning Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Old__c</fullName>
        <formula>IF( NOT( ISBLANK( Birthdate ) ) ,
  IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate ),
     YEAR (Today()) - YEAR ( Birthdate ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>This field was created for Bug # 123951 (PI-03, Sprint-IP) and used in &apos;Contact PB on Create and Update&apos; Process Builder to calculate the Age based on Birthdate field.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorized_Contact__c</fullName>
        <description>Authorized Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorized Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autodialer_Opt_Out__c</fullName>
        <defaultValue>true</defaultValue>
        <description>ADO #217840</description>
        <label>Autodialer Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthdate_Text__c</fullName>
        <description>User Story 111315 - Identify and review ST Contact Dupes (across Accounts); requires non-date field version of the birthdate to determine ST contact record matches</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Birthdate (Text)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_StartYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connections Academy Start Year</description>
        <inlineHelpText>The school year the student&apos;s current period of uninterrupted enrollment began in.</inlineHelpText>
        <label>CA Start Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_BirthDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CS_BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CT_Disposition_Indicator__c</fullName>
        <description>Text Field is creating for the US # 340819, This field is used to update as, If all the student status is &quot;complete&quot;, then it will stamp as &quot;Enrolled&quot;, And if any one of the student statuses is &quot;other than Complete&quot; then it will stamp as &quot;Applicant&quot;.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CT Disposition Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaretakerAccessibilityReason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Caretaker disability assistance information:</inlineHelpText>
        <label>Caretaker Accessibility Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Caretaker_Accessibility__c</fullName>
        <description>Caretaker Accessibility</description>
        <inlineHelpText>Does the caretaker have a disability and need assistance with enrollment?</inlineHelpText>
        <label>Caretaker Accessibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caretaker_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to the Contact records with the Caretaker Record type.It is being used by the student Record Types of Contact</description>
        <label>Caretaker Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Caretaker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <description>Channel Type Category (Replacing MLSC). 
Field coming from Form submission</description>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DIRECTAPPLICANT</fullName>
                    <default>true</default>
                    <label>DIRECTAPPLICANT</label>
                </value>
                <value>
                    <fullName>DISPLAY</fullName>
                </value>
                <value>
                    <fullName>INBOUNDCALL</fullName>
                </value>
                <value>
                    <fullName>INBOUNDCHAT</fullName>
                </value>
                <value>
                    <fullName>INFOSESSION</fullName>
                </value>
                <value>
                    <fullName>OLADEFAULT</fullName>
                </value>
                <value>
                    <fullName>ONDEMPARENT</fullName>
                </value>
                <value>
                    <fullName>ONDEMWEBINAR</fullName>
                </value>
                <value>
                    <fullName>PDSOCIAL</fullName>
                </value>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>SCHOOLORIENTATION</fullName>
                </value>
                <value>
                    <fullName>WEBINAR</fullName>
                </value>
                <value>
                    <fullName>WEBREQINFO</fullName>
                </value>
                <value>
                    <fullName>RETARGETING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Custody__c</fullName>
        <description>With whom does the student live?</description>
        <label>Child Custody</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Custody_Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Childrens_Residential_Center__c</fullName>
        <description>Is the student residing in Children&apos;s Residential Center?</description>
        <label>Childrens Residential Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_of_Birth__c</fullName>
        <description>City of Birth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City of Birth</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commuity_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfirmedPreferredContact__c</fullName>
        <description>Preferred contact type confirmation</description>
        <label>ConfirmedPreferredContact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed - Email/Webmail</fullName>
                </value>
                <value>
                    <fullName>Confirmed - Phone Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <displayFormat>C-{00000}</displayFormat>
        <label>Contact Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Info_Update__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Info Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type_Text__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <description>Contact Record Type in text format to allow it to be referenced in Duplicate Matching Rules because the standard Record Type field is not available for Matching Rules.

User Story #111315</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Current record Contact Record Type value.</inlineHelpText>
        <label>Contact Record Type (Text)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Dual_Citizenship__c</fullName>
        <description>If the student is a dual citizen, what other country are they a citizen of?</description>
        <label>Country Dual Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan ~ AF</fullName>
                </value>
                <value>
                    <fullName>Aland Islands ~ AX</fullName>
                </value>
                <value>
                    <fullName>Albania ~ AL</fullName>
                </value>
                <value>
                    <fullName>Algeria ~ DZ</fullName>
                </value>
                <value>
                    <fullName>American Samoa ~ AS</fullName>
                </value>
                <value>
                    <fullName>Andorra ~ AD</fullName>
                </value>
                <value>
                    <fullName>Angola ~ AO</fullName>
                </value>
                <value>
                    <fullName>Anguilla ~ AI</fullName>
                </value>
                <value>
                    <fullName>Antarctica ~ AQ</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda ~ AG</fullName>
                </value>
                <value>
                    <fullName>Argentina ~ AR</fullName>
                </value>
                <value>
                    <fullName>Armenia ~ AM</fullName>
                </value>
                <value>
                    <fullName>Aruba ~ AW</fullName>
                </value>
                <value>
                    <fullName>Australia ~ AU</fullName>
                </value>
                <value>
                    <fullName>Austria ~ AT</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan ~ AZ</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The ~ BS</fullName>
                </value>
                <value>
                    <fullName>Bahrain ~ BH</fullName>
                </value>
                <value>
                    <fullName>Bangladesh ~ BD</fullName>
                </value>
                <value>
                    <fullName>Barbados ~ BB</fullName>
                </value>
                <value>
                    <fullName>Belarus ~ BY</fullName>
                </value>
                <value>
                    <fullName>Belgium ~ BE</fullName>
                </value>
                <value>
                    <fullName>Belize ~ BZ</fullName>
                </value>
                <value>
                    <fullName>Benin ~ BJ</fullName>
                </value>
                <value>
                    <fullName>Bermuda ~ BM</fullName>
                </value>
                <value>
                    <fullName>Bhutan ~ BT</fullName>
                </value>
                <value>
                    <fullName>Bolivia ~ BO</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina ~ BA</fullName>
                </value>
                <value>
                    <fullName>Botswana ~ BW</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island ~ BV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <description>Country of Citizenship</description>
        <label>Country of Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custody_Information_Changed__c</fullName>
        <label>Custody Information Changed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Privacy_Do_Not_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ADO #118561 - Field to track PCx Caretakers who have legal right as California residents to request OBL to not sell their personal data.</description>
        <label>Data Privacy - Do Not Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deferral_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deferral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition_Indicator__c</fullName>
        <description>Formula Field is creating for the US # 340819, This field will pick the output from &quot;CT Disposition Indicator&quot;. If all the student status is &quot;complete&quot;, then it will stamp as &quot;Enrolled&quot;, And if any one of the student statuses is &quot;other than Complete&quot; then it will stamp as &quot;Applicant&quot;.</description>
        <formula>IF(RecordType.Name=&apos;Caretaker&apos;, CT_Disposition_Indicator__c ,Caretaker_Id__r.CT_Disposition_Indicator__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disposition Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Extension_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Extension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Educational Institution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Educational Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Educational Institution)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address_Changed__c</fullName>
        <label>Email Address Changed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Info_Update__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Info Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolling_4_Students_Flag__c</fullName>
        <label>Enrolling 4 Students Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entrance_Age_Eligibility_Flag__c</fullName>
        <label>Entrance Age Eligibility Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Too Young</fullName>
                </value>
                <value>
                    <fullName>Too young- other options</fullName>
                </value>
                <value>
                    <fullName>Possibly too old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EverEnrolledinNonUSSchool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has your student ever attended school outside of the U.S.</description>
        <label>Ever Enrolled in Non US School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_Enrolled_in_Non_US_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has your student ever attended school outside of the U.S.</description>
        <label>Ever Enrolled in Non US School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_In_US_Schools_For_3_Years__c</fullName>
        <description>If your student was born outside the US, have they been enrolled in a school in the US for any three years</description>
        <label>Ever In US Schools For 3 Years</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ever_in_California_Public_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ever_in_California_Public_School</description>
        <label>Ever in California Public School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federal_Ethnicity__c</fullName>
        <label>Federal Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Parent refused to report ethnicity</fullName>
                </value>
                <value>
                    <fullName>I prefer not to disclose this information</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian: Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Asian: Cambodian</fullName>
                </value>
                <value>
                    <fullName>Asian: Chinese</fullName>
                </value>
                <value>
                    <fullName>Asian: Japanese</fullName>
                </value>
                <value>
                    <fullName>Asian: Korean</fullName>
                </value>
                <value>
                    <fullName>Asian: Laotian</fullName>
                </value>
                <value>
                    <fullName>Asian: Other Asian</fullName>
                </value>
                <value>
                    <fullName>Asian: Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander: Guamanian</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander: Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander: Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander: Samoan</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander: Tahitian</fullName>
                </value>
                <value>
                    <fullName>Refuse To Report</fullName>
                </value>
                <value>
                    <fullName>White (not Hispanic)</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Black/African-American (not Hispanic)</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>White/Caucasian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Race__c</fullName>
        <description>Federal Race</description>
        <label>Federal Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Parent refused to report race</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>I prefer not to disclose this information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federation_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Federation ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Sequence__c</fullName>
        <label>Form Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Name__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_ClientID__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Device_Type__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_ExperimentID__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA ExperimentID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Keyword__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Timestamp__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_UTM_Medium__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_UTM_Source__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_gclickid__c</fullName>
        <description>Populated from GTM team on Care taker Registration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GA gclickid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Selector__c</fullName>
        <label>Gender Selector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please select a value</fullName>
                    <default>true</default>
                    <label>Please select a value</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Gender</label>
        <length>175</length>
        <type>Text</type>
    </fields>
</CustomObject>